--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "element-plus": "^2.2.18",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.8",
