生成缩略图

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+config:
+  thumbnail:
+    path: ${thumbnail_path:D:\\thumbnail}
