--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
             <artifactId>hibernate-types-55</artifactId>
             <version>2.19.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.sejda.imageio/webp-imageio -->
+        <dependency>
+            <groupId>org.sejda.imageio</groupId>
+            <artifactId>webp-imageio</artifactId>
+            <version>0.1.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
