--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,16 +4,15 @@ server:
     context-path: /api
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.2.236:3306/mydearkid?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
-#    url: jdbc:mysql://192.168.31.60:3306/mydearkid?allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
-    username: root
-    password: 123456
+    driver-class-name: ${DRIVER_CLASS_NAME:org.postgresql.Driver}
+    url: ${JDBC_URL:jdbc:postgresql://127.0.0.1:5432/mydearkid}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:123456}
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: ${DDL_AUTO:update}
     show-sql: true
-
 config:
-  thumbnail:
-    path: ${thumbnail_path:D:\\thumbnail}
+  path:
+    photo: ${PHOTO_PATH:F:/cuiwei/Images}
+    thumbnail: ${THUMBNAIL_PATH:D:/thumbnail}
