--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,20 @@ services:
       PGDATA: /var/lib/postgresql/data
     volumes:
       - "D:/ddata:/var/lib/postgresql/data"
-  adminer:
-    image: adminer
+#  adminer:
+#    image: adminer
+#    restart: always
+#    ports:
+#      - "8999:8080"
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin4_container
     restart: always
     ports:
-      - "8999:8080"
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: 838133633@qq.com
+      PGADMIN_DEFAULT_PASSWORD: 123456
   # server:
   #   image: clssw1004/mydearkid:0.1
   #   restart: always
