--- a/src/main/resources/application-win.yml
+++ b/src/main/resources/application-win.yml
@@ -5,7 +5,7 @@ server:
 spring:
   datasource:
     driver-class-name: ${DRIVER_CLASS_NAME:org.postgresql.Driver}
-    url: ${JDBC_URL:jdbc:postgresql://192.168.2.235:5432/mydearkid}
+    url: ${JDBC_URL:jdbc:postgresql://192.168.31.60:5432/mydearkid}
     username: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:123456}
   jpa:
@@ -15,5 +15,6 @@ spring:
 config:
   path:
     photo: ${PHOTO_PATH:D:/cuiwei/Images}
-    thumbnail: ${THUMBNAIL_PATH:D:/thumbnail}
-  extensions: ${EXTENSIONS:jpeg,png,bmp,jpg}
+    thumbnail: ${THUMBNAIL_PATH:D:/cache/thumbnail}
+    gaodekey: ${GAODE_KEY:D:/wspec/mydearkid/gaodekey}
+  extensions: ${EXTENSIONS:jpeg,png,bmp,jpg
